move icons into buttons and fix horizontal scroll

--- a/src/app/station/station-field/station-field.component.scss
+++ b/src/app/station/station-field/station-field.component.scss
@@ -1,10 +1,13 @@
+@import 'rithm-light-palettes';
+
 .flex {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
   height: 100%;
+  border-right: 1px solid map-get($accent-palette, 100);
 
-  i {
+  button {
     align-self: center;
   }
 }
